 ============

 Released on 
  
 New features and improvements:

   - RecurrentOperation: DB Model v3.
   - VAT: put its own icon on operation templates pages (todo #1138). 
 
 Bug fixes:

   - EntryPage: fix new entry insertion (todo #1133).
   - ReconciliationPage: fix debit vs. credit comparison (todo #1132).
   - RecurrentOperations: fix amount update on newly generated record (todo #1135). 
   - RecurrentOperations: review index to allow many cancelled operations (todo #1137). 

 Other changes:

   - RecurrentOperations: set the icon slightly smaller (todo #1138).

-----------------------------------------------------------------------
 Version 0.57
 ============

 Released on 2016-05-17
  
 New features and improvements:

   - Recurrent DB Model v 2.
   - Account: only detail account may be closed (todo #1129).
   - BatUtils: display an error message if appropriate.
   - Entry: associate an operation number when appropriate (todo #1123).
   - GuidedInputBin: row number is italic (todo #1109).
   - GuidedInputBin: review account column width (todo #1108).
   - GuidedInputBin: review account tooltip and message area (todo #1114).
   - GuidedInputBin: review amount column width (todo #1115).
   - Miscellaneous menu: have an option to display the collector content (todo #562).
   - Miscellaneous menu: have an option to display the audit trace (todo #732).
   - myICollector: cleanup the stores at end.
   - OpeTemplate: have an indicator as used by a recurrent model (todo #1117).
   - OpeTemplateProperties: account tooltip is account label (todo #1105).
   - OpeTemplateProperties: review account column width (todo #1108).
   - Recurrent operations are able to use OpeTemplate macros (todo #1116).
   - RecurrentRun validation: improve message (todo #1121).
   - RecurrentRun: let the user modify the amounts before operation insertion (todo #1122).
   - TVAForm: label is now mandatory.
   - TVAStyle: style the VAT declarations.